Drop GUI from build steps